# cmake_tools

./: .gitignore  CMakeLists.txt  README.md
cmake/: 1.cmake  cmake_tools.cmake  cmake_tools_init.cmake  cmake_tools_version.cmake
cmake/core/dependency/std/backend/: aggregate_ffmpeg_prebuilt.cmake  copy_ffmpeg_dlls.cmake  download_and_import_ffmpeg_prebuilt.cmake  download_ffmpeg_prebuilt.cmake  fetch_and_include_sdl2.cmake  fetch_and_include_sdl3.cmake  fetch_sdl2.cmake
cmake/core/dependency/std/backend/cpp_tools/fetch/: cmake_tools_core_dependency_std_backend_fetch_content_cpp_tools.cmake  core_dependency_std_backend_fetch_content_cpp_tools.cmake
cmake/core/dependency/std/backend/ffmpeg/copy/: cmake_tools_core_dependency_std_backend_copy_and_paste_ffmpeg_dlls.cmake  (+1 more)
cmake/core/dependency/std/pipeline/ffmpeg/: cmake_tools_core_dependency_std_pipeline_download_and_unzip_ffmpeg_prebuilt_and_create_ffmpeg_target.cmake  cmake_tools_core_dependency_std_pipeline_download_and_unzip_ffmpeg_prebuilt_and_create_ffmpeg_target_and_copy_dlls.cmake  core_dependency_std_pipeline_download_and_unzip_ffmpeg_prebuilt_and_create_ffmpeg_target.cmake  core_dependency_std_pipeline_download_and_unzip_ffmpeg_prebuilt_and_create_ffmpeg_target_and_copy_ffmpeg_dlls.cmake
cmake/sdl/: cmake_tools_fetch_sdl.cmake  fetch_sdl.cmake  fetch_sdl3.cmake  resolve_sdl.cmake  resolve_sdl3.cmake
docs/chs/: architecture.md  architecture_specification.md
docs/raw/: cmake.md
docs/raw_eng/: rules of cmake content.md
example/minimal/: CMakeLists.txt
(+9 files in other folders)
